--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -54,7 +54,7 @@
   @media screen and (max-width: 600px) {
     #contact,
     footer {
-      height: 40vh;
+      height: 50vh;
     }
     #profile {
       height: 83vh;
@@ -73,7 +73,7 @@
       flex-wrap: wrap;
     }
     .contact-info-container {
-      margin: 0;
+      margin: 5px;
     }
     .contact-info-container p,
     .nav-links li a {
